<resources>
    <!--<string name="app_name">TopShop</string>-->
    <string name="app_name">Top Shop</string>
    <string name="title_activity_devices">DevicesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_item">Import</string>
    <string name="gallery_item">Gallery</string>
    <string name="slideshow_item">Slideshow</string>
    <string name="tools_tem">Tools</string>
    <string name="communicate_item">Communicate</string>
    <string name="share_item">Share</string>
    <string name="send_tem">Send</string>
    <string name="action_search">Search</string>
    <string name="contract">Принимаю условия</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="action_basket">Basket</string>
    <string name="favorities_item">Избранное</string>
    <string name="basket_item">Корзина</string>
    <string name="settings_item">Настройки</string>
    <string name="main_menu">Главная</string>
    <string name="city_item">Город:</string>
    <string name="account_name_item">Имя</string>
    <string name="feedback_item">Обратная связь</string>
    <string name="address_item">Адрес магазина</string>
    <string name="about_last_order_item">Что с моим заказом?</string>
    <string name="comparisons_item">Сравнения</string>
    <string name="orders_item">Мои заказы</string>
    <string name="contacts_item">Контакты</string>
    <string name="about_item">О приложении</string>
    <string name="account">Учетная запись</string>
    <string name="purchases">Покупки</string>
    <string name="top_shop">О Top Shop</string>
</resources>
